Still testing ios spacing issue css

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap:2em;
     background-color: slategrey;
 }
 
